--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,6 +8,18 @@
     <res-type>javax.sql.DataSource</res-type>
     <res-auth>Container</res-auth>
 </resource-ref>
+    <filter-mapping>
+        <filter-name>Cookie</filter-name>
+        <servlet-name>Cart</servlet-name>
+        <servlet-name>Invoice</servlet-name>
+        <servlet-name>User</servlet-name>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>Entity</filter-name>
+        <servlet-name>Cart</servlet-name>
+        <servlet-name>Invoice</servlet-name>
+        <servlet-name>User</servlet-name>
+    </filter-mapping>
     <welcome-file-list>
         <welcome-file>templates/index.html</welcome-file>
     </welcome-file-list>
