--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,24 +3,57 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
-<resource-ref>
-    <res-ref-name>jdbc/pool/test</res-ref-name>
-    <res-type>javax.sql.DataSource</res-type>
-    <res-auth>Container</res-auth>
-</resource-ref>
+    <default-context-path>/api</default-context-path>
+    <filter>
+        <filter-name>CorsFilter</filter-name>
+        <filter-class>org.apache.catalina.filters.CorsFilter</filter-class>
+        <async-supported>true</async-supported>
+        <init-param>
+            <param-name>cors.allowed.origins</param-name>
+            <param-value>*</param-value>
+
+        </init-param>
+    </filter>
+    <resource-ref>
+        <res-ref-name>jdbc/pool/test</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
+    <filter-mapping>
+        <filter-name>CorsFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>Login</filter-name>
+        <servlet-name>User</servlet-name>
+    </filter-mapping>
     <filter-mapping>
         <filter-name>Cookie</filter-name>
         <servlet-name>Cart</servlet-name>
         <servlet-name>Invoice</servlet-name>
         <servlet-name>User</servlet-name>
+        <servlet-name>Login</servlet-name>
+        <servlet-name>Product</servlet-name>
     </filter-mapping>
     <filter-mapping>
         <filter-name>Entity</filter-name>
         <servlet-name>Cart</servlet-name>
         <servlet-name>Invoice</servlet-name>
         <servlet-name>User</servlet-name>
+        <servlet-name>Login</servlet-name>
+        <servlet-name>Product</servlet-name>
     </filter-mapping>
+<!--    <filter-mapping>-->
+<!--        <filter-name>Cors</filter-name>-->
+<!--        <servlet-name>Metadata</servlet-name>-->
+<!--        <servlet-name>Cart</servlet-name>-->
+<!--        <servlet-name>Invoice</servlet-name>-->
+<!--        <servlet-name>User</servlet-name>-->
+<!--        <servlet-name>Login</servlet-name>-->
+<!--        <servlet-name>Product</servlet-name>-->
+<!--    </filter-mapping>-->
+
     <welcome-file-list>
-        <welcome-file>templates/index.html</welcome-file>
+        <welcome-file>index.html</welcome-file>
     </welcome-file-list>
 </web-app>
