--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,6 @@ sql/
 endpoints/
 images/
 !.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
-
 ### IntelliJ IDEA ###
 .idea/
 .idea/modules.xml
@@ -15,3 +12,4 @@ images/
 *.iws
 *.iml
 *.ipr
+/target/
