--- a/pom.xml
+++ b/pom.xml
@@ -176,33 +176,37 @@
                     <target>16</target>
                 </configuration>
             </plugin>
-<!--            <plugin>-->
-<!--                <groupId>io.fabric8</groupId>-->
-<!--                <artifactId>docker-maven-plugin</artifactId>-->
-<!--                <version>0.44.0</version>-->
-<!--                <configuration>-->
-<!--                    <images>-->
-<!--                        <image>-->
-<!--                            <name>yusufozer1/ecommerce</name>-->
-<!--                            <alias>ecommerce</alias>-->
-<!--                            <build>-->
-<!--                                <contextDir>${project.build.directory}/docker</contextDir>-->
-<!--                                <assembly>-->
-<!--                                    <descriptorRef>api</descriptorRef>-->
-<!--                                </assembly>-->
-<!--                            </build>-->
-<!--                        </image>-->
-<!--                    </images>-->
-<!--                </configuration>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <phase>package</phase>-->
-<!--                        <goals>-->
-<!--                            <goal>build</goal>-->
-<!--                        </goals>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--            </plugin>-->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <id>execute-powershell-script</id>
+                        <phase>deploy</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <executable>pwsh.exe</executable>
+                            <arguments>
+                                <argument>-File</argument>
+                                <argument>deploy.ps1</argument>
+                                <argument>${project.build.directory}/${project.build.finalName}.war</argument>
+                                <argument>${project.name}</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>3.1.1</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
