--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
-    <default-context-path></default-context-path>
+    <default-context-path>/ecommerce/api</default-context-path>
     <filter>
         <filter-name>CorsFilter</filter-name>
         <filter-class>org.apache.catalina.filters.CorsFilter</filter-class>
@@ -52,11 +52,7 @@
 <!--        <servlet-name>Login</servlet-name>-->
 <!--        <servlet-name>Product</servlet-name>-->
 <!--    </filter-mapping>-->
-    <servlet-mapping>
-        <servlet-name>default</servlet-name>
-        <url-pattern></url-pattern>
-    </servlet-mapping>
     <welcome-file-list>
-        <welcome-file>swagger/index.html</welcome-file>
+        <welcome-file>index.html</welcome-file>
     </welcome-file-list>
 </web-app>
