--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,7 +15,7 @@
         </init-param>
     </filter>
     <resource-ref>
-        <res-ref-name>jdbc/pool/test</res-ref-name>
+        <res-ref-name>jdbc/ecommerce</res-ref-name>
         <res-type>javax.sql.DataSource</res-type>
         <res-auth>Container</res-auth>
     </resource-ref>
@@ -34,6 +34,7 @@
         <servlet-name>User</servlet-name>
         <servlet-name>Login</servlet-name>
         <servlet-name>Product</servlet-name>
+        <servlet-name>Rating</servlet-name>
     </filter-mapping>
     <filter-mapping>
         <filter-name>Entity</filter-name>
@@ -42,6 +43,7 @@
         <servlet-name>User</servlet-name>
         <servlet-name>Login</servlet-name>
         <servlet-name>Product</servlet-name>
+        <servlet-name>Rating</servlet-name>
     </filter-mapping>
 <!--    <filter-mapping>-->
 <!--        <filter-name>Cors</filter-name>-->
